[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "terminusgps_authorizenet"
version = "2.0.0"
description = "Authorize.Net Python SDK"
requires-python = ">=3.14"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "lxml>=6.1.1",
    "pyxb-x>=1.2.6.3",
    "requests>=2.34.2",
]

[tool.setuptools.packages.find]
where = ["contrib", "docs", "tests*"]

[project.optional-dependencies]
test = ["nose==1.*", "mock==2.*"]
