[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "terminusgps_authorizenet"
version = "2.1.0"
description = "Authorize.Net Python SDK"
requires-python = ">=3.14"
readme = "README.md"


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "lxml>=6.1.1",
    "pyxb-x>=1.2.6.3",
    "requests>=2.34.2",
]

[project.urls]
Repository = "https://github.com/terminusgps/terminusgps-authorizenet-sdk/"

[tool.setuptools]
package-dir = {"" = "authorizenet"}

[tool.setuptools.packages.find]
where = ["contrib", "docs", "tests*"]

[project.optional-dependencies]
test = ["nose==1.*", "mock==2.*"]
